--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@rails/actiontext": "^8.0.100",
     "@zxing/browser": "^0.1.5",
     "@zxing/library": "^0.21.3",
+    "aos": "^2.3.4",
     "trix": "^2.1.12"
   }
 }
