--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@zxing/browser": "^0.1.5",
     "@zxing/library": "^0.21.3",
     "aos": "^2.3.4",
+    "three": "^0.180.0",
     "trix": "^2.1.12"
   }
 }
